# akwaya

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  freestyle.py  main.py  makefile  pyproject.toml  test_crawler_concurrency.py
artifacts/: deduplication_results.json  deduplication_whitelabels_results.json  leads_augmented.json  leads_sourced.json  raw_prospect_normalized.json  raw_prospective_individuals.json  raw_prospective_whitelabels.json  sample_leads_augmented.json  sample_leads_sourced.json
artifacts/db_models_temp/prospect/: 0612fa7c-dba9-4160-bf89-d03c0ba31f27.json  867e23d9-34c8-4fc4-8a15-5bb2afe2a8bc.json  89341abe-a869-460f-aebc-e381be9941fa.json  8fa18e61-4a99-45bf-9620-cdfcf41eaa0b.json  986d7ddc-b5ac-48dc-bf4c-c3039205e53d.json  dc66433a-80f0-4089-978e-e7de636346e4.json  temp_09529a16-093d-4206-aaf1-7165aae7cf94.json  temp_366d73f8-3dc7-4bdc-a90a-36d8b165f72c.json  temp_60cb25e3-9dcc-47c5-82d7-b5b29c99a99a.json  temp_bf1dc758-1222-49c4-aeca-2c16517c9ba3.json  temp_e8824107-b4ec-4373-b973-fe462b3c0758.json  temp_ea94a527-5eb8-4a9a-b016-358a844dfbdc.json
artifacts/db_models_temp/raw_snapshot/: 00887670-07bb-4a2d-ae7f-7b9e3db79de3.json  (+28 more)
client/: index.html  package-lock.json  vite.config.js
client/src/: App.jsx  index.css
internal/config/: funnel_config.yaml  paths_config.py  search_config.yaml  secret.py
internal/domain/: scraper.py  service.py
internal/utils/: dto.py  helper.py  loader.py  models.py  normalizer.py  parser.py  prompt.py  scoring.py  search_engine.py
server/: controller.py  dto.py
tests/: test_crawler_concurrency.py
(+459 files in other folders)
