[project]
name = "akwaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.6",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
]